--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -130,7 +130,7 @@ object Form2: TForm2
     object RESTClientSQLSALARY: TFloatField
       FieldName = 'SALARY'
       Required = True
-      currency = True
+      DisplayFormat = '###,###,###,##0.000'
     end
     object RESTClientSQLFULL_NAME: TStringField
       FieldName = 'FULL_NAME'
@@ -164,7 +164,7 @@ object Form2: TForm2
     OutputConverters = <>
     Left = 388
     Top = 5
-    object LinkListControlToField2: TLinkListControlToField
+    object LinkListControlToField1: TLinkListControlToField
       Category = 'Quick Bindings'
       DataSource = BindSourceDB1
       FieldName = 'FULL_NAME'
