Fix para Mobile, não conectava, ajustado...
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@75 5a50b8e4-c46e-494c-8199-665086288703

--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -24,16 +24,22 @@ object Form2: TForm2
     object Edit1: TEdit
       Touch.InteractiveGestures = [LongTap, DoubleTap]
       TabOrder = 3
-      Text = '192.168.20.132'
+      Text = '192.168.20.111'
       Position.X = 32.000000000000000000
       Position.Y = 34.000000000000000000
+      Size.Width = 129.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
     end
     object Edit2: TEdit
       Touch.InteractiveGestures = [LongTap, DoubleTap]
       TabOrder = 4
       Text = '8082'
-      Position.X = 138.000000000000000000
+      Position.X = 186.000000000000000000
       Position.Y = 34.000000000000000000
+      Size.Width = 39.000000000000000000
+      Size.Height = 22.000000000000000000
+      Size.PlatformDefault = False
     end
     object Label1: TLabel
       Position.X = 32.000000000000000000
@@ -44,7 +50,7 @@ object Form2: TForm2
       Text = 'Host'
     end
     object Label2: TLabel
-      Position.X = 139.000000000000000000
+      Position.X = 187.000000000000000000
       Position.Y = 12.000000000000000000
       Size.Width = 70.000000000000000000
       Size.Height = 17.000000000000000000
@@ -53,25 +59,18 @@ object Form2: TForm2
     end
   end
   object ListView1: TListView
-    ItemAppearanceClassName = 'TMultiDetailItemAppearance'
-    ItemEditAppearanceClassName = 'TMultiDetailDeleteAppearance'
+    ItemAppearanceClassName = 'TListItemAppearance'
+    ItemEditAppearanceClassName = 'TListItemShowCheckAppearance'
     HeaderAppearanceClassName = 'TListHeaderObjects'
     FooterAppearanceClassName = 'TListHeaderObjects'
     Align = Client
     Size.Width = 640.000000000000000000
     Size.Height = 402.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 17
+    TabOrder = 22
   end
   object RESTClientSQL: TRESTClientSQL
-    Active = True
-    FieldDefs = <
-      item
-        Name = 'CAMPO'
-        Attributes = [faFixed]
-        DataType = ftFixedWideChar
-        Size = 31
-      end>
+    FieldDefs = <>
     IndexDefs = <>
     FetchOptions.AssignedValues = [evMode]
     FetchOptions.Mode = fmAll
@@ -90,39 +89,76 @@ object Form2: TForm2
     Params = <>
     DataBase = RESTDataBase
     SQL.Strings = (
-      
-        'SELECT RDB$RELATION_NAME as Campo FROM RDB$RELATION_FIELDS WHERE' +
-        ' RDB$RELATION_NAME = '#39'EMPLOYEE'#39' AND   RDB$FIELD_NAME = '#39'LAST_NAM' +
-        'E'#39' order by 1 rows 1')
+      'SELECT * FROM employee')
     Left = 340
     Top = 176
-    object RESTClientSQLCAMPO: TWideStringField
-      FieldName = 'CAMPO'
+    object RESTClientSQLEMP_NO: TSmallintField
+      FieldName = 'EMP_NO'
+      Required = True
+    end
+    object RESTClientSQLFIRST_NAME: TStringField
+      FieldName = 'FIRST_NAME'
+      Required = True
+      Size = 15
+    end
+    object RESTClientSQLLAST_NAME: TStringField
+      FieldName = 'LAST_NAME'
+      Required = True
+    end
+    object RESTClientSQLPHONE_EXT: TStringField
+      FieldName = 'PHONE_EXT'
+      Size = 4
+    end
+    object RESTClientSQLHIRE_DATE: TSQLTimeStampField
+      FieldName = 'HIRE_DATE'
+      Required = True
+    end
+    object RESTClientSQLDEPT_NO: TStringField
+      FieldName = 'DEPT_NO'
+      Required = True
       FixedChar = True
-      Size = 31
+      Size = 3
+    end
+    object RESTClientSQLJOB_CODE: TStringField
+      FieldName = 'JOB_CODE'
+      Required = True
+      Size = 5
+    end
+    object RESTClientSQLJOB_GRADE: TSmallintField
+      FieldName = 'JOB_GRADE'
+      Required = True
+    end
+    object RESTClientSQLJOB_COUNTRY: TStringField
+      FieldName = 'JOB_COUNTRY'
+      Required = True
+      Size = 15
+    end
+    object RESTClientSQLSALARY: TFloatField
+      FieldName = 'SALARY'
+      Required = True
+    end
+    object RESTClientSQLFULL_NAME: TStringField
+      FieldName = 'FULL_NAME'
+      Size = 37
     end
   end
   object RESTDataBase: TRESTDataBase
     OnBeforeConnect = RESTDataBaseBeforeConnect
-    Active = True
+    Active = False
+    Compression = False
     Login = 'testserver'
     Password = 'testserver'
     Proxy = False
     ProxyOptions.Port = 8888
-    PoolerService = '192.168.20.132'
+    PoolerService = '192.168.20.111'
     PoolerPort = 8082
     PoolerName = 'ServerMethods1.RESTPoolerDB'
     RestModule = 'TServerMethods1'
     StateConnection.AutoCheck = False
     StateConnection.InTime = 1000
+    RequestTimeOut = 10000
     Left = 224
     Top = 144
-  end
-  object BindSourceDB1: TBindSourceDB
-    DataSet = RESTClientSQL
-    ScopeMappings = <>
-    Left = 392
-    Top = 89
   end
   object BindingsList1: TBindingsList
     Methods = <>
@@ -132,11 +168,17 @@ object Form2: TForm2
     object LinkListControlToField1: TLinkListControlToField
       Category = 'Quick Bindings'
       DataSource = BindSourceDB1
-      FieldName = 'CAMPO'
+      FieldName = 'FIRST_NAME'
       Control = ListView1
       FillExpressions = <>
       FillHeaderExpressions = <>
       FillBreakGroups = <>
     end
+  end
+  object BindSourceDB1: TBindSourceDB
+    DataSet = RESTClientSQL
+    ScopeMappings = <>
+    Left = 296
+    Top = 134
   end
 end
