--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -157,6 +157,9 @@ object Form2: TForm2
     StateConnection.AutoCheck = False
     StateConnection.InTime = 1000
     RequestTimeOut = 10000
+    Encoding = esASCII
+    Context = 'Datasnap'
+    RESTContext = 'rest/'
     Left = 224
     Top = 144
   end
