Atualização e correção do Componente RESTPoolerList
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@79 5a50b8e4-c46e-494c-8199-665086288703

--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -144,7 +144,7 @@ object Form2: TForm2
   end
   object RESTDataBase: TRESTDataBase
     OnBeforeConnect = RESTDataBaseBeforeConnect
-    Active = False
+    Active = True
     Compression = False
     Login = 'testserver'
     Password = 'testserver'
