--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -90,8 +90,8 @@ object Form2: TForm2
     DataBase = RESTDataBase
     SQL.Strings = (
       'SELECT * FROM employee')
-    Left = 340
-    Top = 176
+    Left = 220
+    Top = 192
     object RESTClientSQLEMP_NO: TSmallintField
       FieldName = 'EMP_NO'
       Required = True
@@ -144,7 +144,7 @@ object Form2: TForm2
   end
   object RESTDataBase: TRESTDataBase
     OnBeforeConnect = RESTDataBaseBeforeConnect
-    Active = True
+    Active = False
     Compression = False
     Login = 'testserver'
     Password = 'testserver'
