--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -157,7 +157,7 @@ object Form2: TForm2
     StateConnection.AutoCheck = False
     StateConnection.InTime = 1000
     RequestTimeOut = 10000
-    Encoding = esASCII
+    Encoding = esUtf8
     Context = 'Datasnap'
     RESTContext = 'rest/'
     Left = 224
