Android Sample, test and OK...  Compression Work. Speed up OK.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@119 5a50b8e4-c46e-494c-8199-665086288703

--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -158,7 +158,7 @@ object Form2: TForm2
   object RESTDataBase: TRESTDataBase
     OnBeforeConnect = RESTDataBaseBeforeConnect
     Active = False
-    Compression = False
+    Compression = True
     Login = 'testserver'
     Password = 'testserver'
     Proxy = False
