Correção de BUG's.  Add SSL no Servidor, criação da Unit uRESTBride que adicionada a um form ela te libera a nova variável FServer que te tem as novas opções, não usa mais a Unit do Indy para WebBroker.  Correção de exemplos.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@154 5a50b8e4-c46e-494c-8199-665086288703

--- a/DEMO/Android/Unit2.fmx
+++ b/DEMO/Android/Unit2.fmx
@@ -120,7 +120,7 @@ object Form2: TForm2
     DataCache = False
     Params = <
       item
-        DataType = ftString
+        DataType = ftUnknown
         Name = 'FIRST_NAME'
         ParamType = ptUnknown
       end>
@@ -187,7 +187,7 @@ object Form2: TForm2
     Password = 'testserver'
     Proxy = False
     ProxyOptions.Port = 8888
-    PoolerService = '192.168.20.111'
+    PoolerService = '127.0.0.1'
     PoolerPort = 8082
     PoolerName = 'ServerMethods1.RESTPoolerDB'
     RestModule = 'TServerMethods1'
