--- a/CORE/Samples/SimpleServer/Server/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Server/Lazarus/formMain.lfm
@@ -1,10 +1,10 @@
 object frmMain: TfrmMain
-  Left = 419
-  Height = 385
-  Top = 138
+  Left = 276
+  Height = 389
+  Top = 99
   Width = 522
   Caption = 'REST Dataware CORE - Simple Server'
-  ClientHeight = 385
+  ClientHeight = 389
   ClientWidth = 522
   Color = clBtnFace
   Font.Color = clWindowText
@@ -48,7 +48,7 @@ object frmMain: TfrmMain
         Top = 37
         Width = 43
         AutoSize = False
-        Caption = 'UsuÃ¡rio'
+        Caption = 'Usuário'
         Font.Color = clWindowText
         Font.Height = -11
         Font.Name = 'Tahoma'
@@ -1219,8 +1219,8 @@ object frmMain: TfrmMain
     end
     object tsLogs: TTabSheet
       Caption = 'Logs'
-      ClientHeight = 327
-      ClientWidth = 514
+      ClientHeight = 322
+      ClientWidth = 516
       ImageIndex = 1
       object Label19: TLabel
         Left = 7
