Correção nos exemplos do lazarus /MemDataset1.Clear;   //corrige bug no TMemDataset
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@285 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
@@ -1042,7 +1042,7 @@ object Form2: TForm2
     Font.Name = 'Tahoma'
     Font.Style = [fsBold]
     Lines.Strings = (
-      'SELECT * FROM EMPLOYEE'
+      'SELECT FIRST 1 * FROM EMPLOYEE'
     )
     ParentFont = False
     TabOrder = 5
