Ajuste para exemplo Client Lazarus vir com a opção de compressão ativa direto...
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@302 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
@@ -1067,11 +1067,13 @@ object Form2: TForm2
     Top = 93
     Width = 93
     Caption = 'Compression'
+    Checked = True
     Font.Color = clWindowText
     Font.Height = -11
     Font.Name = 'Tahoma'
     Font.Style = [fsBold]
     ParentFont = False
+    State = cbChecked
     TabOrder = 7
   end
   object DataSource1: TDataSource
