Ajustes diversos de correções de codificação de caracteres de Delphi's antigos para novos e Lazarus.  Ajustes em todos os exemplos de correções em suas compilações da CORE.  Correções de compilação e melhorias de velocidade.
 Falta algumas correções a implementar que farei o mais breve possível.

git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@356 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
@@ -1083,9 +1083,8 @@ object Form2: TForm2
     top = 328
   end
   object RESTDWDataBase1: TRESTDWDataBase
-    Active = True
+    Active = False
     Compression = True
-    MyIP = '127.0.0.1'
     Login = 'testserver'
     Password = 'testserver'
     Proxy = False
@@ -1096,6 +1095,7 @@ object Form2: TForm2
     StateConnection.AutoCheck = False
     StateConnection.InTime = 1000
     RequestTimeOut = 10000
+    EncodeStrings = True
     Encoding = esASCII
     StrsTrim = False
     StrsEmpty2Null = False
