Ajuste no ExecSQL do RESTDWClientSQL da versão CORE para acertar erros.  Adição para exemplo de uso do ExecSQL da versão CORE no exemplo RESTClient do CORE para D7 a Tokyo/Lazarus
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@357 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
@@ -1050,7 +1050,7 @@ object Form2: TForm2
   object Button1: TButton
     Left = 366
     Height = 24
-    Top = 162
+    Top = 148
     Width = 133
     Caption = 'Open'
     Font.Color = clWindowText
@@ -1075,6 +1075,20 @@ object Form2: TForm2
     ParentFont = False
     State = cbChecked
     TabOrder = 7
+  end
+  object Button2: TButton
+    Left = 366
+    Height = 24
+    Top = 176
+    Width = 133
+    Caption = 'Execute'
+    Font.Color = clWindowText
+    Font.Height = -11
+    Font.Name = 'Tahoma'
+    Font.Style = [fsBold]
+    OnClick = Button2Click
+    ParentFont = False
+    TabOrder = 8
   end
   object DataSource1: TDataSource
     AutoEdit = False
